fix carousel on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,7 @@ nav a img {
     bottom: 8px;
     right: 13px;
 }
+
 .main-special-offer {
     display: flex;
     justify-content: flex-end;
@@ -256,14 +257,15 @@ nav a img {
 }
 
 .main-facts {
-    margin-top: 63px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 997px;
+    margin: 63px auto;
 }
 
 .main-facts .available-store-img {
-    max-width: 200px;
+    max-width: 175px;
     height: auto;
 }
 
@@ -294,29 +296,53 @@ nav a img {
 
 .carousel .fact-container {
     height: 274px;
-    box-shadow: 0 4px 0 #44bfff, 0 0 35px 15px rgba(34, 34, 34, 0.05);
     background-color: #ffffff;
-    border-bottom: 3px solid #35baf1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.carousel .fact-container:hover {
+    box-shadow: 0 0 35px 15px rgba(34, 34, 34, 0.05);
+    border-bottom: 3px solid #35baf1;
+    position: relative;
+    right: 1px;
+    left: 1px;
 }
 
 .carousel .fact-container img {
+    margin-top: -18px;
+    width: 144px;
+    height: 133px;
+    transition: .3s;
+}
+
+.carousel .fact-container:hover img {
     width: 188px;
     height: 176px;
-    margin-top: -18px;
 }
+
+@media (min-width: 940px) {
+    .carousel .fact-container.active img {
+        width: 188px;
+        height: 176px;
+    }
+}
+
 
 .carousel .fact-container p {
     max-width: 263px;
     margin: 0 auto;
     color: #222222;
     font-family: montserratbold;
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 700;
     text-align: center;
     padding-top: 22px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 .fact-description {
@@ -332,6 +358,19 @@ nav a img {
     padding-top: 69px;
     padding-left: 25px;
     padding-right: 25px;
+}
+
+.slick-active {
+    box-shadow: 0 0 35px 15px rgba(34, 34, 34, 0.05);
+    border-bottom: 3px solid #35baf1;
+    position: relative;
+    right: 1px;
+    left: 1px;
+}
+
+.slick-active.fact-container img {
+    width: 188px;
+    height: 176px;
 }
 
 .slick-track {
@@ -351,6 +390,7 @@ nav a img {
     box-shadow: 0 0 35px 15px rgba(34, 34, 34, 0.05);
     padding: 21px;
     margin: 21px;
+    transition: .3s;
 }
 
 
